Add EsPasswordDebil Unit Test

--- a/GestorPasswords/GestorPasswordsTest/GestorPasswordsTest.csproj
+++ b/GestorPasswords/GestorPasswordsTest/GestorPasswordsTest.csproj
@@ -49,11 +49,18 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ManipuladorPasswordTest.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GestorPasswordsDominio\GestorPasswordsDominio.csproj">
+      <Project>{13e3468e-7253-416b-ac3b-2411af1bac4c}</Project>
+      <Name>GestorPasswordsDominio</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
