--- a/GestorPasswords/GestorPasswordsTest/GestorPasswordsTest.csproj
+++ b/GestorPasswords/GestorPasswordsTest/GestorPasswordsTest.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="ManipuladorPasswordTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CategoriaTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
