Refactor Length > 25 Unit test

--- a/GestorPasswords/GestorPasswordsDominio/GestorPasswordsDominio.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/GestorPasswordsDominio.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Categoria.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="IncorrectLengthException.cs" />
-    <Compile Include="ManipuladorPassword.cs" />
+    <Compile Include="PasswordHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TarjetaCredito.cs" />
     <Compile Include="Usuario.cs" />
