--- a/GestorPasswords/GestorPasswordsDominio/GestorPasswordsDominio.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/GestorPasswordsDominio.csproj
@@ -42,10 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Categoria.cs" />
-    <Compile Include="Class1.cs" />
     <Compile Include="ManipuladorPassword.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TarjetaCredito.cs" />
+    <Compile Include="UserPasswordPair.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
