--- a/GestorPasswords/GestorPasswordsDominio/GestorPasswordsDominio.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/GestorPasswordsDominio.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Categoria.cs" />
     <Compile Include="ExceptionExistingUserPasswordPair.cs" />
+    <Compile Include="ExceptionUserPasswordPairHasInvalidUsernameLength.cs" />
     <Compile Include="ManipuladorPassword.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TarjetaCredito.cs" />
