--- a/GestorPasswords/GestorPasswordsDominio/GestorPasswordsDominio.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/GestorPasswordsDominio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Categoria.cs" />
     <Compile Include="ExceptionExistingUserPasswordPair.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidPasswordLength.cs" />
+    <Compile Include="ExceptionUserPasswordPairHasInvalidSiteLength.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidUsernameLength.cs" />
     <Compile Include="ManipuladorPassword.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
