--- a/GestorPasswords/GestorPasswordsDominio/GestorPasswordsDominio.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/GestorPasswordsDominio.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Categoria.cs" />
     <Compile Include="ExceptionExistingUserPasswordPair.cs" />
+    <Compile Include="ExceptionUserPasswordPairHasInvalidNotesLength.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidPasswordLength.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidSiteLength.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidUsernameLength.cs" />
