--- a/GestorPasswords/GestorPasswordsTest/GestorPasswordsTest.csproj
+++ b/GestorPasswords/GestorPasswordsTest/GestorPasswordsTest.csproj
@@ -135,7 +135,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ManipuladorPasswordTest.cs" />
+    <Compile Include="PasswordHandlerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CategoriaTest.cs" />
   </ItemGroup>
