Unit tests that expected the method AddCreditCard() to return false were changed to expect for an exception instead

--- a/GestorPasswords/GestorPasswordsDominio/GestorPasswordsDominio.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/GestorPasswordsDominio.csproj
@@ -42,6 +42,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Categoria.cs" />
+    <Compile Include="ExceptionCreditCardDoesNotContainOnlyDigits.cs" />
+    <Compile Include="ExceptionCreditCardHasInvalidCodeLength.cs" />
+    <Compile Include="ExceptionCreditCardHasInvalidNameLength.cs" />
+    <Compile Include="ExceptionCreditCardHasInvalidNotesLength.cs" />
+    <Compile Include="ExceptionCreditCardHasInvalidNumberLength.cs" />
+    <Compile Include="ExceptionCreditCardHasInvalidTypeLength.cs" />
+    <Compile Include="ExceptionCreditCardNumberAlreadyExistsInUser.cs" />
     <Compile Include="ExceptionExistingUserPasswordPair.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidNotesLength.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidPasswordLength.cs" />
