--- a/GestorPasswords/GestorPasswordsDominio/GestorPasswordsDominio.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/GestorPasswordsDominio.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Categoria.cs" />
+    <Compile Include="Category.cs" />
     <Compile Include="ExceptionCreditCardDoesNotContainOnlyDigits.cs" />
     <Compile Include="ExceptionCreditCardHasInvalidCodeLength.cs" />
     <Compile Include="ExceptionCreditCardHasInvalidNameLength.cs" />
@@ -57,9 +57,9 @@
     <Compile Include="IncorrectLengthException.cs" />
     <Compile Include="PasswordHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TarjetaCredito.cs" />
+    <Compile Include="CreditCard.cs" />
     <Compile Include="UserPasswordPair.cs" />
-    <Compile Include="Usuario.cs" />
+    <Compile Include="User.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
