--- a/GestorPasswords/GestorPasswordsTest/GestorPasswordsTest.csproj
+++ b/GestorPasswords/GestorPasswordsTest/GestorPasswordsTest.csproj
@@ -137,7 +137,7 @@
   <ItemGroup>
     <Compile Include="PasswordHandlerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CategoriaTest.cs" />
+    <Compile Include="CategoryTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
