--- a/GestorPasswords/GestorPasswordsTest/PasswordsManagerTest.csproj
+++ b/GestorPasswords/GestorPasswordsTest/PasswordsManagerTest.csproj
@@ -144,9 +144,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GestorPasswordsDominio\GestorPasswordsDominio.csproj">
+    <ProjectReference Include="..\GestorPasswordsDominio\PasswordsManagerDomain.csproj">
       <Project>{13e3468e-7253-416b-ac3b-2411af1bac4c}</Project>
-      <Name>GestorPasswordsDominio</Name>
+      <Name>PasswordsManagerDomain</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
