Red, Green and Refactor Category.RemoveCreditCard()

--- a/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Category.cs" />
     <Compile Include="ExceptionCreditCardCodeHasNonNumericCharacters.cs" />
     <Compile Include="ExceptionCreditCardDoesNotContainOnlyDigits.cs" />
+    <Compile Include="ExceptionCreditCardDoesNotExist.cs" />
     <Compile Include="ExceptionCreditCardHasInvalidCodeLength.cs" />
     <Compile Include="ExceptionCreditCardHasInvalidNameLength.cs" />
     <Compile Include="ExceptionCreditCardHasInvalidNotesLength.cs" />
