--- a/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ExceptionCreditCardHasInvalidTypeLength.cs" />
     <Compile Include="ExceptionCreditCardNumberAlreadyExistsInUser.cs" />
     <Compile Include="ExceptionExistingUserPasswordPair.cs" />
+    <Compile Include="ExceptionIncorrectMasterPassword.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidNotesLength.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidPasswordLength.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidSiteLength.cs" />
