--- a/GestorPasswords/GestorPasswordsTest/PasswordsManagerTest.csproj
+++ b/GestorPasswords/GestorPasswordsTest/PasswordsManagerTest.csproj
@@ -138,6 +138,7 @@
     <Compile Include="PasswordHandlerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CategoryTest.cs" />
+    <Compile Include="UserTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
