--- a/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Category.cs" />
+    <Compile Include="ExceptionCategoryHasInvalidNameLength.cs" />
     <Compile Include="ExceptionCreditCardCodeHasNonNumericCharacters.cs" />
     <Compile Include="ExceptionCreditCardDoesNotContainOnlyDigits.cs" />
     <Compile Include="ExceptionCreditCardDoesNotExist.cs" />
