--- a/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Category.cs" />
     <Compile Include="ExceptionCategoryHasInvalidNameLength.cs" />
+    <Compile Include="ExceptionCategoryNotExists.cs" />
     <Compile Include="ExceptionCreditCardCodeHasNonNumericCharacters.cs" />
     <Compile Include="ExceptionCreditCardDoesNotContainOnlyDigits.cs" />
     <Compile Include="ExceptionCreditCardDoesNotExist.cs" />
