Red, Green and Refactor Category.RemoveUserPasswordPair()

--- a/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ExceptionCreditCardNumberAlreadyExistsInUser.cs" />
     <Compile Include="ExceptionExistingUserPasswordPair.cs" />
     <Compile Include="ExceptionIncorrectMasterPassword.cs" />
+    <Compile Include="ExceptionUserPasswordPairDoesNotExist.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidNotesLength.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidPasswordLength.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidSiteLength.cs" />
