--- a/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
@@ -62,6 +62,7 @@
     <Compile Include="ExceptionUserPasswordPairHasInvalidUsernameLength.cs" />
     <Compile Include="ExceptionIncorrectLength.cs" />
     <Compile Include="PasswordHandler.cs" />
+    <Compile Include="PasswordManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CreditCard.cs" />
     <Compile Include="UserPasswordPair.cs" />
