--- a/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
@@ -54,6 +54,7 @@
     <Compile Include="ExceptionCreditCardHasInvalidTypeLength.cs" />
     <Compile Include="ExceptionCreditCardNumberAlreadyExistsInUser.cs" />
     <Compile Include="ExceptionExistingUserPasswordPair.cs" />
+    <Compile Include="ExceptionIncorrectGenerationPasswordType.cs" />
     <Compile Include="ExceptionIncorrectMasterPassword.cs" />
     <Compile Include="ExceptionIncorrectUserNameLength.cs" />
     <Compile Include="ExceptionUserDoesNotExist.cs" />
