--- a/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
@@ -64,6 +64,7 @@
     <Compile Include="ExceptionUserPasswordPairHasInvalidSiteLength.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidUsernameLength.cs" />
     <Compile Include="ExceptionIncorrectLength.cs" />
+    <Compile Include="PasswordGenerationConditions.cs" />
     <Compile Include="PasswordHandler.cs" />
     <Compile Include="PasswordManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
