Red, Green and Refactor for ACreditCardOfUserAppearedInDataBreaches

--- a/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
@@ -64,6 +64,8 @@
     <Compile Include="ExceptionUserPasswordPairHasInvalidSiteLength.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidUsernameLength.cs" />
     <Compile Include="ExceptionIncorrectLength.cs" />
+    <Compile Include="IDataBreachesFormatter.cs" />
+    <Compile Include="TextBoxDataBreaches.cs" />
     <Compile Include="PasswordGenerationConditions.cs" />
     <Compile Include="PasswordHandler.cs" />
     <Compile Include="PasswordManager.cs" />
