Red, Green and Refactor for AddExpiredCreditCard

--- a/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
@@ -64,6 +64,7 @@
     <Compile Include="ExceptionUserPasswordPairHasInvalidSiteLength.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidUsernameLength.cs" />
     <Compile Include="ExceptionIncorrectLength.cs" />
+    <Compile Include="ExceptionCreditCardHasExpired.cs" />
     <Compile Include="IDataBreachesFormatter.cs" />
     <Compile Include="TextBoxDataBreaches.cs" />
     <Compile Include="PasswordGenerationConditions.cs" />
