--- a/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ExceptionExistingUserPasswordPair.cs" />
     <Compile Include="ExceptionIncorrectGenerationPasswordType.cs" />
     <Compile Include="ExceptionIncorrectMasterPassword.cs" />
+    <Compile Include="ExceptionIncorrectMasterPasswordLength.cs" />
     <Compile Include="ExceptionIncorrectUserNameLength.cs" />
     <Compile Include="ExceptionUserDoesNotExist.cs" />
     <Compile Include="ExceptionUserPasswordPairDoesNotExist.cs" />
