Red, Green and Refactor for AddUserWithUsernameContainingBlankSpacesBetweenCharacters

--- a/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ExceptionIncorrectMasterPassword.cs" />
     <Compile Include="ExceptionIncorrectUserNameLength.cs" />
     <Compile Include="ExceptionUserDoesNotExist.cs" />
+    <Compile Include="ExceptionUsernameContainsSpaces.cs" />
     <Compile Include="ExceptionUserPasswordPairDoesNotExist.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidNotesLength.cs" />
     <Compile Include="ExceptionUserPasswordPairHasInvalidPasswordLength.cs" />
