Add Check Data Breaches

--- a/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
+++ b/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
@@ -46,6 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckDataBreaches.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CheckDataBreaches.Designer.cs">
+      <DependentUpon>CheckDataBreaches.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DataBreachesResult.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DataBreachesResult.Designer.cs">
+      <DependentUpon>DataBreachesResult.cs</DependentUpon>
+    </Compile>
     <Compile Include="LogIn.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -72,6 +84,12 @@
     <Compile Include="SignUp.Designer.cs">
       <DependentUpon>SignUp.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="CheckDataBreaches.resx">
+      <DependentUpon>CheckDataBreaches.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DataBreachesResult.resx">
+      <DependentUpon>DataBreachesResult.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="LogIn.resx">
       <DependentUpon>LogIn.cs</DependentUpon>
     </EmbeddedResource>
