add credit card user interface

--- a/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
+++ b/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
@@ -50,6 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddCreditCard.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="AddCreditCard.Designer.cs">
+      <DependentUpon>AddCreditCard.cs</DependentUpon>
+    </Compile>
     <Compile Include="AddUserPasswordPair.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -88,6 +94,18 @@
     </Compile>
     <Compile Include="CategoryForm.Designer.cs">
       <DependentUpon>CategoryForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CreditCardForm.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CreditCardForm.Designer.cs">
+      <DependentUpon>CreditCardForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CreditCards.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="CreditCards.Designer.cs">
+      <DependentUpon>CreditCards.cs</DependentUpon>
     </Compile>
     <Compile Include="LogIn.cs">
       <SubType>UserControl</SubType>
@@ -139,6 +157,15 @@
     <Compile Include="SignUp.Designer.cs">
       <DependentUpon>SignUp.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AddCreditCard.resx">
+      <DependentUpon>AddCreditCard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CreditCardForm.resx">
+      <DependentUpon>CreditCardForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CreditCards.resx">
+      <DependentUpon>CreditCards.cs</DependentUpon>
+    </EmbeddedResource>
     <Compile Include="UserPasswordPairForm.cs">
       <SubType>UserControl</SubType>
     </Compile>
