--- a/GestorPasswords/GestorPasswordsTest/PasswordsManagerTest.csproj
+++ b/GestorPasswords/GestorPasswordsTest/PasswordsManagerTest.csproj
@@ -140,7 +140,7 @@
     <Compile Include="CategoryTest.cs" />
     <Compile Include="SystemTest.cs" />
     <Compile Include="CreditCardTest.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="UserPasswordPairTest.cs" />
     <Compile Include="UserTest.cs" />
   </ItemGroup>
   <ItemGroup>
