credit card UI without see complete cc and format

--- a/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
+++ b/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
@@ -131,6 +131,12 @@
     <Compile Include="ModifyCategory.Designer.cs">
       <DependentUpon>ModifyCategory.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModifyCreditCard.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ModifyCreditCard.Designer.cs">
+      <DependentUpon>ModifyCreditCard.cs</DependentUpon>
+    </Compile>
     <Compile Include="ModifyUserPasswordPair.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -201,6 +207,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ModifyUserPasswordPair.resx">
       <DependentUpon>ModifyUserPasswordPair.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModifyCreditCard.resx">
+      <DependentUpon>ModifyCreditCard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Passwords.resx">
       <DependentUpon>Passwords.cs</DependentUpon>
