--- a/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
+++ b/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
@@ -169,6 +169,9 @@
     <EmbeddedResource Include="ModifyUserPasswordPair.resx">
       <DependentUpon>ModifyUserPasswordPair.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Passwords.resx">
+      <DependentUpon>Passwords.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
