Add share and unshare user interface

--- a/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
@@ -68,6 +68,7 @@
     <Compile Include="ExceptionUserPasswordPairHasInvalidUsernameLength.cs" />
     <Compile Include="ExceptionIncorrectLength.cs" />
     <Compile Include="ExceptionCreditCardHasExpired.cs" />
+    <Compile Include="ExceptionUserPasswordPairIsNotSharedWithAnyone.cs" />
     <Compile Include="IDataBreachesFormatter.cs" />
     <Compile Include="TextBoxDataBreaches.cs" />
     <Compile Include="PasswordGenerationConditions.cs" />
