--- a/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
+++ b/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
@@ -127,11 +127,23 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShareUserPasswordPair.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ShareUserPasswordPair.Designer.cs">
+      <DependentUpon>ShareUserPasswordPair.cs</DependentUpon>
+    </Compile>
     <Compile Include="SignUp.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="SignUp.Designer.cs">
       <DependentUpon>SignUp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UnshareUserPasswordPair.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UnshareUserPasswordPair.Designer.cs">
+      <DependentUpon>UnshareUserPasswordPair.cs</DependentUpon>
     </Compile>
     <Compile Include="UserPasswordPairForm.cs">
       <SubType>UserControl</SubType>
@@ -181,8 +193,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ShareUserPasswordPair.resx">
+      <DependentUpon>ShareUserPasswordPair.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SignUp.resx">
       <DependentUpon>SignUp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UnshareUserPasswordPair.resx">
+      <DependentUpon>UnshareUserPasswordPair.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserPasswordPairForm.resx">
       <DependentUpon>UserPasswordPairForm.cs</DependentUpon>
