Add ModifyUserPasswordPairExposedInDataBreaches UI

--- a/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
+++ b/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
@@ -119,6 +119,12 @@
     <Compile Include="ModifyUserPasswordPair.Designer.cs">
       <DependentUpon>ModifyUserPasswordPair.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModifyUserPasswordPairExposedInDataBreaches.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ModifyUserPasswordPairExposedInDataBreaches.Designer.cs">
+      <DependentUpon>ModifyUserPasswordPairExposedInDataBreaches.cs</DependentUpon>
+    </Compile>
     <Compile Include="Passwords.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -180,6 +186,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ModifyUserPasswordPair.resx">
       <DependentUpon>ModifyUserPasswordPair.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModifyUserPasswordPairExposedInDataBreaches.resx">
+      <DependentUpon>ModifyUserPasswordPairExposedInDataBreaches.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Passwords.resx">
       <DependentUpon>Passwords.cs</DependentUpon>
