added format when showing credit card list

--- a/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
+++ b/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
@@ -166,6 +166,9 @@
     <EmbeddedResource Include="AddCreditCard.resx">
       <DependentUpon>AddCreditCard.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CategoryForm.resx">
+      <DependentUpon>CategoryForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CreditCardForm.resx">
       <DependentUpon>CreditCardForm.cs</DependentUpon>
     </EmbeddedResource>
