changed properties first letter to uppercase

--- a/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
+++ b/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
@@ -169,6 +169,9 @@
     <EmbeddedResource Include="CategoryForm.resx">
       <DependentUpon>CategoryForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ChangeMasterPasswords.resx">
+      <DependentUpon>ChangeMasterPasswords.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CreditCardForm.resx">
       <DependentUpon>CreditCardForm.cs</DependentUpon>
     </EmbeddedResource>
