--- a/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
+++ b/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -155,6 +156,18 @@
     <Compile Include="Passwords.Designer.cs">
       <DependentUpon>Passwords.cs</DependentUpon>
     </Compile>
+    <Compile Include="PasswordsStrengthChart.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PasswordsStrengthChart.Designer.cs">
+      <DependentUpon>PasswordsStrengthChart.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PasswordsStrengthTable.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PasswordsStrengthTable.Designer.cs">
+      <DependentUpon>PasswordsStrengthTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="PopUp30Seconds.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -237,6 +250,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Passwords.resx">
       <DependentUpon>Passwords.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PasswordsStrengthChart.resx">
+      <DependentUpon>PasswordsStrengthChart.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PasswordsStrengthTable.resx">
+      <DependentUpon>PasswordsStrengthTable.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PopUp30Seconds.resx">
       <DependentUpon>PopUp30Seconds.cs</DependentUpon>
