Refactor tests that check adding a User pass pair to a new file

--- a/GestorPasswords/GestorPasswordsTest/PasswordsManagerTest.csproj
+++ b/GestorPasswords/GestorPasswordsTest/PasswordsManagerTest.csproj
@@ -135,9 +135,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddingCreditCardInCategoryTest.cs" />
+    <Compile Include="CategoryModifyingPasswordColorsTest.cs" />
+    <Compile Include="ModifingValidityOfUserPaswordPairArgumentInCategoryTest.cs" />
     <Compile Include="PasswordHandlerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CategoryTest.cs" />
+    <Compile Include="RemovingPasswordsFromCategoryTest.cs" />
     <Compile Include="SystemTest.cs" />
     <Compile Include="CreditCardTest.cs" />
     <Compile Include="UserPasswordPairTest.cs" />
