Rename in csproj of category test

--- a/GestorPasswords/GestorPasswordsTest/PasswordsManagerTest.csproj
+++ b/GestorPasswords/GestorPasswordsTest/PasswordsManagerTest.csproj
@@ -136,11 +136,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddingCreditCardInCategoryTest.cs" />
+    <Compile Include="AddingUserPaswordPairsInCategoryTest.cs" />
     <Compile Include="CategoryModifyingPasswordColorsTest.cs" />
+    <Compile Include="CategoryToStringTest.cs" />
     <Compile Include="ModifingValidityOfUserPaswordPairArgumentInCategoryTest.cs" />
     <Compile Include="PasswordHandlerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CategoryTest.cs" />
+    <Compile Include="ValidityWhenModifyingCreditCardInCategoryTest.cs" />
     <Compile Include="RemovingPasswordsFromCategoryTest.cs" />
     <Compile Include="SystemTest.cs" />
     <Compile Include="CreditCardTest.cs" />
