report table and chart

--- a/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
+++ b/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
@@ -156,17 +156,23 @@
     <Compile Include="Passwords.Designer.cs">
       <DependentUpon>Passwords.cs</DependentUpon>
     </Compile>
-    <Compile Include="PasswordsStrengthChart.cs">
+    <Compile Include="PasswordsReportPasswordsList.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="PasswordsStrengthChart.Designer.cs">
-      <DependentUpon>PasswordsStrengthChart.cs</DependentUpon>
+    <Compile Include="PasswordsReportPasswordsList.Designer.cs">
+      <DependentUpon>PasswordsReportPasswordsList.cs</DependentUpon>
     </Compile>
-    <Compile Include="PasswordsStrengthTable.cs">
+    <Compile Include="PasswordsStrengthReportChart.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="PasswordsStrengthTable.Designer.cs">
-      <DependentUpon>PasswordsStrengthTable.cs</DependentUpon>
+    <Compile Include="PasswordsStrengthReportChart.Designer.cs">
+      <DependentUpon>PasswordsStrengthReportChart.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PasswordsStrengthReportTable.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="PasswordsStrengthReportTable.Designer.cs">
+      <DependentUpon>PasswordsStrengthReportTable.cs</DependentUpon>
     </Compile>
     <Compile Include="PopUp30Seconds.cs">
       <SubType>Form</SubType>
@@ -251,11 +257,14 @@
     <EmbeddedResource Include="Passwords.resx">
       <DependentUpon>Passwords.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PasswordsStrengthChart.resx">
-      <DependentUpon>PasswordsStrengthChart.cs</DependentUpon>
+    <EmbeddedResource Include="PasswordsReportPasswordsList.resx">
+      <DependentUpon>PasswordsReportPasswordsList.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PasswordsStrengthTable.resx">
-      <DependentUpon>PasswordsStrengthTable.cs</DependentUpon>
+    <EmbeddedResource Include="PasswordsStrengthReportChart.resx">
+      <DependentUpon>PasswordsStrengthReportChart.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PasswordsStrengthReportTable.resx">
+      <DependentUpon>PasswordsStrengthReportTable.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PopUp30Seconds.resx">
       <DependentUpon>PopUp30Seconds.cs</DependentUpon>
