fixed button back of modify reported password

--- a/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
+++ b/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
@@ -138,6 +138,12 @@
     <Compile Include="ModifyCreditCard.Designer.cs">
       <DependentUpon>ModifyCreditCard.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModifyReportedUserPasswordPair.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ModifyReportedUserPasswordPair.Designer.cs">
+      <DependentUpon>ModifyReportedUserPasswordPair.cs</DependentUpon>
+    </Compile>
     <Compile Include="ModifyUserPasswordPair.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -244,6 +250,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Menu.resx">
       <DependentUpon>Menu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModifyReportedUserPasswordPair.resx">
+      <DependentUpon>ModifyReportedUserPasswordPair.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ModifyUserPasswordPair.resx">
       <DependentUpon>ModifyUserPasswordPair.cs</DependentUpon>
