Add tests for GetUserPasswordPairsOfASpecificColor()

--- a/GestorPasswords/GestorPasswordsTest/PasswordsManagerTest.csproj
+++ b/GestorPasswords/GestorPasswordsTest/PasswordsManagerTest.csproj
@@ -146,6 +146,7 @@
     <Compile Include="RemovingPasswordsFromCategoryTest.cs" />
     <Compile Include="SystemTest.cs" />
     <Compile Include="CreditCardTest.cs" />
+    <Compile Include="GetPasswordsOfCertainColorTest.cs" />
     <Compile Include="UserPasswordPairTest.cs" />
     <Compile Include="UserTest.cs" />
   </ItemGroup>
