inheritance of category

--- a/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Category.cs" />
+    <Compile Include="NormalCategory.cs" />
     <Compile Include="ExceptionCategoryAlreadyExists.cs" />
     <Compile Include="ExceptionCategoryNotExists.cs" />
     <Compile Include="ExceptionCreditCardCodeHasNonNumericCharacters.cs" />
@@ -59,6 +60,7 @@
     <Compile Include="ExceptionCreditCardHasExpired.cs" />
     <Compile Include="ExceptionUserPasswordPairIsNotSharedWithAnyone.cs" />
     <Compile Include="IDataBreachesFormatter.cs" />
+    <Compile Include="SpecialCategory.cs" />
     <Compile Include="TextBoxDataBreaches.cs" />
     <Compile Include="PasswordGenerationConditions.cs" />
     <Compile Include="PasswordHandler.cs" />
