refactor password UI

--- a/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
+++ b/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
@@ -63,6 +63,12 @@
     <Compile Include="AddUserPasswordPair.Designer.cs">
       <DependentUpon>AddUserPasswordPair.cs</DependentUpon>
     </Compile>
+    <Compile Include="ChangeMasterPassword.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ChangeMasterPassword.Designer.cs">
+      <DependentUpon>ChangeMasterPassword.cs</DependentUpon>
+    </Compile>
     <Compile Include="CheckDataBreaches.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -74,9 +80,6 @@
     </Compile>
     <Compile Include="DataBreachesResult.Designer.cs">
       <DependentUpon>DataBreachesResult.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ChangeMasterPasswords.cs">
-      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="AddCategory.cs">
       <SubType>UserControl</SubType>
@@ -206,8 +209,8 @@
     <EmbeddedResource Include="CategoryForm.resx">
       <DependentUpon>CategoryForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ChangeMasterPasswords.resx">
-      <DependentUpon>ChangeMasterPasswords.cs</DependentUpon>
+    <EmbeddedResource Include="ChangeMasterPassword.resx">
+      <DependentUpon>ChangeMasterPassword.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CreditCardForm.resx">
       <DependentUpon>CreditCardForm.cs</DependentUpon>
