Rename assembly and namespace for DataManagerDomain

--- a/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
+++ b/GestorPasswords/GestorPasswordsDominio/PasswordsManagerDomain.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{13E3468E-7253-416B-AC3B-2411AF1BAC4C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GestorPasswordsDominio</RootNamespace>
-    <AssemblyName>GestorPasswordsDominio</AssemblyName>
+    <RootNamespace>DataManagerDomain</RootNamespace>
+    <AssemblyName>DataManagerDomain</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
