--- a/GestorPasswords/GestorPasswordsTest/PasswordsManagerTest.csproj
+++ b/GestorPasswords/GestorPasswordsTest/PasswordsManagerTest.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{561F2483-B163-45A4-8745-60D7C1F380A5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GestorPasswordsTest</RootNamespace>
-    <AssemblyName>GestorPasswordsTest</AssemblyName>
+    <RootNamespace>DataManagerTest</RootNamespace>
+    <AssemblyName>DataManagerTest</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
