Rename project folders

--- a/GestorPasswords/DataManagerTest/PasswordsManagerTest.csproj
+++ b/GestorPasswords/DataManagerTest/PasswordsManagerTest.csproj
@@ -155,7 +155,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GestorPasswordsDominio\PasswordsManagerDomain.csproj">
+    <ProjectReference Include="..\DataManagerDomain\PasswordsManagerDomain.csproj">
       <Project>{13e3468e-7253-416b-ac3b-2411af1bac4c}</Project>
       <Name>PasswordsManagerDomain</Name>
     </ProjectReference>
