--- a/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
+++ b/GestorPasswords/PasswordsManagerUserInterface/PasswordsManagerUserInterface.csproj
@@ -316,7 +316,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GestorPasswordsDominio\PasswordsManagerDomain.csproj">
+    <ProjectReference Include="..\DataManagerDomain\PasswordsManagerDomain.csproj">
       <Project>{13e3468e-7253-416b-ac3b-2411af1bac4c}</Project>
       <Name>PasswordsManagerDomain</Name>
     </ProjectReference>
